<resources>
    <string name="app_name">KotlinLogin2</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="signin">Signin</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
</resources>